--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ img {
     grid-area: 2 / 1 / 3 / 2;
     border-top: 10px solid gray;
     padding: 0px 50px 50px;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     align-content: stretch;
     justify-content: center;
@@ -76,20 +76,31 @@ img {
 
 #move {
     display: flex;
+    align-content: flex-end;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 60px;
 }
 #choices {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     font-size: 30px;
     gap: 10px 50px;
     flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    padding: 20px;
+
 }
 
 
 
 
 h1 {
-    padding: 0px 0px 0px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
 }
 
 p{
