--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 #paragraph {
     display: flex;
     padding: 0px 10px 0px;
+    font-size: 15px;
 }
 
 
@@ -82,7 +83,10 @@ img {
     justify-content: center;
     align-items: stretch;
     font-family: "VT323", monospace;
+    color:#00FF00
 }
+
+
 
 #move {
     display: flex;
@@ -93,11 +97,14 @@ img {
     gap: 60px;
 }
 
+#stats{
+    color:white;
+}
+
 
 .choices {
     background-color: green;
     font-size: 16px;
-
 }
 
 
@@ -121,12 +128,11 @@ h1 {
     display: flex;
     justify-content: center;
     margin: auto;
-    padding: 10px 0px 0px
+    padding: 10px 0px 0px;
+    font-size: 20px;
+    color: white;
 }
 
-p{
-    color:#00FF00;
-}
 
 button {
     color: white;
