--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ background-color: black;
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    background-color: dimgray;
+    width: 100%;
 }
 
 pre {
@@ -50,9 +52,12 @@ pre {
 }
 
 img {
-    width: 150svh;
-    height: 65vh;
+    display: flex;
+    width: 100%;
+    height: 60vh;
 }
+
+
 
 #hud {
     display: flex;
