--- a/style.css
+++ b/style.css
@@ -104,12 +104,16 @@ img {
 
 #stats{
     color:white;
+    display: flex;
+    gap: 40px;
 }
 
 
 .choices {
+    display: flex;
     background-color: green;
     font-size: 16px;
+    margin: 0px 10px;
 }
 
 
@@ -122,9 +126,10 @@ img {
     justify-content: space-evenly;
     gap: 10px 50px;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-content: center;
     padding: 10px;
+    margin: 0px 10px;
 
 }
 
